[package]
name = "qbitflow_payment_system"
version = "0.1.0"
description = "QBitFlow Payment System Program"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "qbitflow_payment_system"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]


[dependencies]
anchor-lang = {version = "0.31.1", features = ["init-if-needed"]}
anchor-spl = "0.31.1"
log = "0.4.28"

